Fixed issue with Payment not showing on tablet mode

--- a/src/assets/css/views/_Payment.scss
+++ b/src/assets/css/views/_Payment.scss
@@ -5,6 +5,7 @@
   align-items: center;
   position: absolute;
   top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   z-index: 1000;
